2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-09-22 Christophe Demko <chdemko@gmail.com>
	* build.xml
	* src/fr/kbertet/dgraph/DAGraph.java
	* src/fr/kbertet/dgraph/DGraph.iuml
	* src/fr/kbertet/dgraph/DGraph.java
	* src/fr/kbertet/dgraph/Node.java
	* src/fr/kbertet/lattice/Concept.java
	* src/fr/kbertet/lattice/ConceptLattice.java
	* src/fr/kbertet/lattice/Lattice.java
	* test/fr/kbertet/dgraph/DAGraphTest.java
	* test/fr/kbertet/dgraph/DGraphTest.java
		^ Implement getEdges using iterator

2014-09-21 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/lattice/ImplicationalSystem.java
		# Fix issue

2014-09-20 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/dgraph/Edge.iuml
	* src/fr/kbertet/dgraph/Edge.java
		+ Add methods

2014-09-20 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/dgraph/DGraph.java
	* src/fr/kbertet/dgraph/Node.iuml
	* src/fr/kbertet/dgraph/Node.java
	* src/fr/kbertet/lattice/ComparableSet.iuml
	* src/fr/kbertet/lattice/ComparableSet.java
	* src/fr/kbertet/lattice/Concept.iuml
	* src/fr/kbertet/lattice/Concept.java
	* src/fr/kbertet/lattice/ConceptLattice.iuml
	* src/fr/kbertet/lattice/ConceptLattice.java
	* src/fr/kbertet/lattice/Lattice.java
	* test/fr/kbertet/dgraph/DGraphTest.java
	* test/fr/kbertet/dgraph/NodeTest.java
	* test/fr/kbertet/lattice/ComparableSetTest.java
	* test/fr/kbertet/lattice/ConceptLatticeTest.java
	* test/fr/kbertet/lattice/ConceptTest.java
		^ Use clone method and Cloneable interface instead of copy method

2014-09-20 Christophe Demko <chdemko@gmail.com>
	* src/kbertet/dgraph/DGraph.java
	* src/kbertet/dgraph/DGraph.iuml
	* test/kbertet/dgraph/DGraphTest.java
		^ Change methods to private
